2001-03-13  Hans Petter Jansson  <hpj@ximian.com>

	* boot-conf.in: Remove calls to xst_begin() - it's invoked by
	  xst_init(). Unfortunately this makes the code asymmetric, but if
	  we were to invoke it ourselves, we'd also have to call
	  xst_platform_ensure_supported() in three places.

	* network-conf.in: Ditto.

2001-03-13  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_print_state_tag): Renamed from
	  xst_xml_print_state. Removed spurious indent.
	
	* disks-conf.in (xml_print): Use xst_xml_print_state_tag instead of
	  direct print..

	* media.pl.in (xst_media_xml_print): Use xst_xml_print_state_tag.

2001-03-13  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_print_begin): Implement.
	  (xst_xml_print_end): Implement.
	  (xst_xml_print_indent): Use xst_xml_print_string.
	  (xst_xml_print_vspace): Use xst_xml_print_string.
	  (xst_xml_print_state): Use xst_xml_print_string.

	* disks-conf.in (xml_print): Use xst_xml_print_(begin|end).

2001-03-13  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in: Fixed bug, debug 9 was not being rotated out.

2001-03-12  Arturo Espinsoa  <arturo@ximian.com>

	* network.pl.in: using debug functions for messages.
	* parse.pl.in: same
	* replace.pl.in: quote backquote also in replace_sh.
	* xml.pl.in: &quot; was being transformed into \'. Should
	  be ' only. Fixed.
	
2001-03-12  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_indent): -> xst_xml_print_indent.
	  (xst_xml_vspace): -> xst_xml_print_vspace.
	  (xst_xml_print_string): Implement.
	  (xst_xml_print_line): Use xst_xml_print_string().

	* boot-conf.in disks-conf.in hardware-conf.in
	  media.pl.in memory-conf.in network-conf.in
	  removable-media.pl.in time-conf.in users-conf.in:

	  xst_xml_indent -> xst_xml_print_indent.
	  xst_xml_vspace -> xst_xml_print_vspace.

2001-03-08  Arturo Espinosa  <arturo@ximian.com>

	* service.pl.in: New functions to handle SysV rc
	  scripts, a little better organized code.