@@ -239,11 +239,7 @@ sub xml_print
   my @array_keys =
 	 (nameserver, searchdomain, order);
 
-  print "<?xml version='1.0' encoding='ISO-8859-1' standalone='yes'?>\n";
-  print "<!DOCTYPE network []>\n\n";
-  print "<network>\n";
-  &xst_xml_print_vspace ();
-  &xst_xml_enter ();
+  &xst_xml_print_begin ();
 
   # Hostname, domain, search domains, nameservers.
 
@@ -253,10 +249,8 @@ sub xml_print
 
   &xst_xml_print_hash_hash ($$h{"interface"}, "interface");
   &xst_xml_print_hash_hash ($$h{"dialing"}, "dialing");
-  
-  &xst_xml_leave ();
-  &xst_xml_print_vspace ();
-  &xst_xml_print_line ("</network>\n");
+
+  &xst_xml_print_end ();
 }
 
 
