@@ -163,13 +163,10 @@ sub xml_print
 
   @scalar_keys = (timezone);
   $sync = $$h{"sync"};
-  
-  print "<?xml version='1.0' encoding='ISO-8859-1' standalone='yes'?>\n";
-  print "<!DOCTYPE time []>\n\n";
-  print "<time>\n";
-  &xst_xml_enter ();
-  &xst_xml_print_vspace ();
 
+  &xst_xml_print_begin ();
+
+  &xst_xml_print_vspace ();
   &xst_xml_print_hash ($$h{"local_time"}, "local_time");
   &xst_xml_print_vspace ();
   
@@ -188,9 +185,8 @@ sub xml_print
 
   &xst_xml_print_scalars ($h, @scalar_keys);
   &xst_xml_print_vspace ();
-  
-  &xst_xml_leave ();
-  &xst_xml_print_line ("</time>\n");
+
+  &xst_xml_print_end ();
 }
 
 # Main operations
